Bug 480361 - No display of tags in the split editor
Summary: No display of tags in the split editor
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-01-26 14:55 UTC by Ralf Habacker
Modified: 2024-01-30 11:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments
Screenshot (26.24 KB, image/png)
2024-01-26 14:55 UTC, Ralf Habacker
Details
test file (6.93 KB, text/xml)
2024-01-26 14:56 UTC, Ralf Habacker
Details
Screenshot showing split editor from KMyMoney 5.1 including tags (64.65 KB, image/png)
2024-01-30 09:02 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2024-01-26 14:55:43 UTC
Created attachment 165248 [details]
Screenshot

SUMMARY
Tags in transaction splits are not shown in the split editor

STEPS TO REPRODUCE
1. start kmymoney
2. open appended file
3. In the bank account open the transaction from 2024-01-26 
4. select the split symbol to show the split editor

OBSERVED RESULT
The splits shown includes tags, which are not shown in the  split editor, see the appended screenshot

EXPECTED RESULT
In the split editor there should be a column showing the associated tag

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Ralf Habacker 2024-01-26 14:56:08 UTC
Created attachment 165249 [details]
test file
Comment 2 Amir Khan 2024-01-26 16:54:24 UTC
This bug looks related to bug 480360.
Comment 3 Ralf Habacker 2024-01-28 21:15:24 UTC
Git commit 2c05ef486d9c7d9400db2624d127a24efd61bc53 by Ralf Habacker.
Committed on 28/01/2024 at 21:15.
Pushed by habacker into branch 'master'.

Add tag column to split editor
FIXED-IN:5.2.0

M  +11   -0    kmymoney/mymoney/splitmodel.cpp
M  +1    -0    kmymoney/mymoney/splitmodel.h
M  +2    -1    kmymoney/views/splitview.cpp

https://invent.kde.org/office/kmymoney/-/commit/2c05ef486d9c7d9400db2624d127a24efd61bc53
Comment 4 Ralf Habacker 2024-01-28 21:19:55 UTC
(In reply to Amir Khan from comment #2)
> This bug looks related to bug 480360.

I don't think so - this error is caused by a missing column in the split editor, which has been fixed with comment 3, while error 480360 seems to be a problem with the filter in the tag list used to find corresponding transactions.
Comment 5 Thomas Baumgart 2024-01-29 06:48:39 UTC
Git commit 0151dd466679300e2aef6cd41be873e79375b0c6 by Thomas Baumgart.
Committed on 29/01/2024 at 06:47.
Pushed by tbaumgart into branch 'master'.

Add tags column to split editor
FIXED-IN: 5.2

M  +28   -16   kmymoney/mymoney/splitmodel.cpp
M  +1    -0    kmymoney/mymoney/splitmodel.h

https://invent.kde.org/office/kmymoney/-/commit/0151dd466679300e2aef6cd41be873e79375b0c6
Comment 6 Ralf Habacker 2024-01-30 09:02:51 UTC
Created attachment 165340 [details]
Screenshot showing split editor from KMyMoney 5.1 including tags

In the 5.1 branch, the tag column is located after the memo column and not at the end as in the master branch as requested.
Comment 7 Thomas Baumgart 2024-01-30 09:50:52 UTC
But in master you can move the column to where ever you want.
Comment 8 Ralf Habacker 2024-01-30 10:29:50 UTC
(In reply to Thomas Baumgart from comment #7)
> But in master you can move the column to where ever you want.

I can confirm that this works. Do you have any idea how to set up the tags column initially after the memo column when using this order ?

    enum Column {
        Category = 0,
        Memo,
        Payment,
        Deposit,
        Tags,
        // insert new columns above this line
        MaxColumns,
    };
Comment 9 Thomas Baumgart 2024-01-30 11:48:11 UTC
Unfortunately no.