Add tag column to split editor

BUG:480361
FIXED-IN:5.2.0